--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -265,8 +265,23 @@ body {
     height: 100%;
 }
 .slider .slider-container .slider-item img {
+    position: relative;
     width: 100%;
     height: 100%;
+    z-index: 1;
+}
+.slider .slider-container .slider-item .slider-logo{
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 100;
+}
+.slider .slider-container .slider-item .slider-logo img{
+    margin: 0 20px;
+    width: 50%;
+    height: 20%;
 }
 .slider .slider-container .slider-item.active {
     transform: translateX(-110%);
