--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -476,6 +476,86 @@ body {
 }
 
 /* !Modal trailers */
+/*.verTrailer {
+    font-size: 20px;
+    height: 30px;
+    width: 70%;
+    border-radius: 2%;
+    border: none;
+    background-color: orange;
+    cursor: pointer;
+    -webkit-border-radius: 2%;
+    -moz-border-radius: 2%;
+    -ms-border-radius: 2%;
+    -o-border-radius: 2%;
+}*/
+
+.modalTrailer{
+    background-color: rgba(255, 255, 255, 0.199);
+    padding: 2rem;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    align-items: center;
+    justify-content: center;
+    text-align: justify;
+}
+
+.trailerContenido {
+    margin: auto;
+    background-color: #000;
+    border: rgb(255, 255, 255) solid 2px;
+    padding: 3em;
+    height: 100%;
+    width: 70%;
+    
+}
+
+.trailerRemove {
+    text-align: right;
+}
+
+.remove {
+    width: auto;
+    height: 30px;
+    text-align: right;
+    cursor: pointer;
+}
+
+.trailerDescripcion {
+    display: flex;
+    align-items: center;
+    margin-top: 1rem ;
+}
+
+.logoTrailer {
+    width: 200px;
+    height: auto;
+    margin: 1rem ;
+}
+
+.logoTrailerGrande {
+    width: 130px;
+    height: auto;
+    margin: 1rem ;
+}
+
+.trailerDetalles {
+    color: #fff;
+    margin: 1rem
+}
+
+.iframeTrailer {
+    width: 100%;
+    height: 67%;
+}
+
+
+
 /* !Paginas !!!!!!!!!!*/
 iframe {
     width: 98.5vw;
@@ -565,14 +645,43 @@ iframe {
     #logo {
         display: none;
     }
+    .iconoi {
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+    }
+    .trailerDescripcion {
+        margin-bottom: 1rem;
+    }
+    .trailerDetalles {
+    color: #fff;
+    margin: 0rem;
+}
 }
 
+@media (max-width: 480px) {
+    footer {
+        flex-direction: column;
+        justify-content: center;
+        height: 120px;
+    }
+}
 
 @media screen and (min-width: 352px) and (max-width: 480px) {
     .container {
         font-size: 10px;
         margin-bottom: 1em;
     }
+
+    .trailerContenido {
+        width: 100%;
+    }
+
+    .logoTrailer {
+        width: auto;
+        height: 200px;
+    }
+
 }
 
 footer {
@@ -593,13 +702,9 @@ footer {
     
 }
 
-@media (max-width: 480px) {
-    footer {
-        flex-direction: column;
-        justify-content: center;
-        height: 120px;
-    }
-}
+
+
+
 
 
 @media screen and (max-width: 767px) {
@@ -626,6 +731,77 @@ footer {
     }
 }
 
+
+
+
+@media (max-width: 912px) {
+    .trailerDescripcion {
+        flex-direction: column;
+    }
+
+    .trailerContenido {
+        height: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .logoTrailer {
+        width: 350px;
+        height: auto;
+    }
+}
+
+
+@media (max-width: 821px) {
+    header {
+        height: 120px;
+    }
+
+    .slider {
+        margin: 120px auto;
+    }
+
+    .titleContainer h2 {
+        font-size: 2.5em;
+        text-align: left;
+    }
+
+    footer h2 {
+        font-size: 20px;
+        margin: 20px;
+    }
+
+    #imageDramaContainer {
+        margin: 2.8rem 0;
+    }
+
+    .modal-columns .imageDrama:hover .trans h3,
+    p {
+        display: none;
+    }
+
+
+    .trailerContenido {
+        height: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .trailerDescripcion {
+        flex-direction: row;
+        justify-content: center;
+        margin: 0;
+    }
+
+    .logoTrailer {
+        width: 250px;
+        height: auto;
+    }
+
+    
+}
 
 @media (max-width: 420px) {
     #imageDramaContainer {
@@ -693,31 +869,25 @@ footer {
     }
 }
 
-@media (max-width: 821px) {
-    header {
-        height: 120px;
+@media (max-width: 280px) {
+    .trailerDescripcion {
+        flex-direction: column;
     }
 
-    .slider {
-        margin: 120px auto;
+    .trailerContenido {
+        height: 90%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
     }
 
-    .titleContainer h2 {
-        font-size: 2.5em;
-        text-align: left;
+    .logoTrailer {
+        width: 150px;
+        height: auto;
     }
 
-    footer h2 {
-        font-size: 20px;
-        margin: 20px;
-    }
-
-    #imageDramaContainer {
-        margin: 2.8rem 0;
-    }
-
-    .modal-columns .imageDrama:hover .trans h3,
-    p {
-        display: none;
+    .iframeTrailer {
+        width: 100%;
     }
 }
