--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -338,12 +338,12 @@ body {
 }
 .iconoi {
     width: 70px;
-    height: 60px;
+    height: 70px;
     cursor: pointer;
 }
 .iconod {
     width: 70px;
-    height: 60px;
+    height: 70px;
     cursor: pointer;
 }
 .btnFlecha {
@@ -362,6 +362,7 @@ body {
     left: 17px;
     position: relative;
 }
+
 /* Inicio del Hover */
 .imageDrama:hover .trans {
     display: block;
@@ -386,18 +387,16 @@ body {
     justify-content: center;
     align-items: center;
 }
-
 .banImageHover{
     height: 40%;
 }
 .botones{
     margin: 150px 0;
 }
-
 /* !Fin de películas y series */
-
-/* *Modal Trailers */
-
+.wordMovie{
+    visibility: hidden;
+}
 .verTrailer {
     font-size: 20px;
     height: 45px;
@@ -412,6 +411,8 @@ body {
     -ms-border-radius: 2%;
     -o-border-radius: 2%;
 }
+/* !Fin Hover Peliculas y series*/
+/* *Modal Trailers */
 .video-container {
     position: fixed;
     top: 16%;
@@ -474,7 +475,6 @@ body {
     -ms-transform: scale(0.4);
     -o-transform: scale(0.4);
 }
-
 /* !Modal trailers */
 /* !Paginas !!!!!!!!!!*/
 iframe {
@@ -602,6 +602,8 @@ footer {
 }
 
 
+
+
 @media screen and (max-width: 767px) {
     .modal {
         width: 80vw;
@@ -625,43 +627,100 @@ footer {
         padding: 0;
     }
 }
-
+@media screen and (max-width:768px) {
+    .imageDrama:hover .trans {
+        display: block;
+    }
+    .imageDrama .trans {
+        display: block;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        bottom: 0px;
+        right: 0px;
+        text-align: center;
+        padding: 0px;
+        font: 15px/5px verdana;
+        z-index: 1;
+    }
+    .botones{
+        margin-top: 80px;
+    }
+    .verTrailer{
+        width: 100px;
+        height: 30px;
+    }
+    #botonGato{
+        margin-top: 145px;
+    }
+    .iconoi {
+        width: 50px;
+        height: 50px;
+        cursor: pointer;
+    }
+    .iconod {
+        width: 50px;
+        height: 50px;
+        cursor: pointer;
+    }
+}
 
 @media (max-width: 420px) {
-    #imageDramaContainer {
-        flex-direction: column;
-        align-items: center;
+    .genero {
+        margin-right: -110px;
     }
-
-    #imageDramaContainer img {
-        width: auto;
-        height: 300px;
+    .imageDrama:hover .trans {
+        display: block;
     }
-
-    #imageComediaContainer {
-        flex-direction: column;
-        align-items: center;
+    
+    .imageDrama .trans {
+        display: none;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        bottom: 0px;
+        right: 0px;
+        text-align: center;
+        padding: 0px;
+        font: 15px/5px verdana;
+        z-index: 1;
     }
-
-    #imageComediaContainer img {
-        width: auto;
-        height: 300px;
+    .imageDrama img {
+        width: 100%;
+        height: 100%;
+        padding: 0;
     }
-
-    #imageAnimacionContainer {
-        flex-direction: column;
-        align-items: center;
+    .botones{
+        margin-top: 80px;
     }
-
-    #imageAnimacionContainer img {
-        width: auto;
-        height: 300px;
+    .verTrailer{
+        width: 100px;
+        height: 30px;
     }
-
+    #botonGato{
+        margin-top: 145px;
+    }
     .iconoi {
         display: none;
     }
-
+    #imageDramaContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    #imageComediaContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    #imageAnimacionContainer {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
     footer h2 {
         font-size: 15px;
         margin: 20px;
