--- a/Public/css/style.css
+++ b/Public/css/style.css
@@ -241,7 +241,7 @@ body {
 .slider {
     position: relative;
     width: 100%;
-    height: 400px;
+    height: 500px;
     margin: 0 auto 50px;
     overflow: hidden;
     
@@ -266,15 +266,46 @@ body {
     height: 100%;
 }
 .slider .slider-container .slider-item img {
+    position: relative;
     width: 100%;
     height: 100%;
+    z-index: 1;
 }
+
+.slider .slider-container .slider-item .slider-logo{
+    position: relative;
+    bottom: 250px;
+    left: 50px;
+    width: 70%  ;
+    height: 150%;
+    z-index: 100;
+
+}
+.slider .slider-container .slider-item .slider-logo img{
+    margin: 0 20px;
+    width: 50%;
+    height: 25%;
+}
+
 .slider .slider-container .slider-item.active {
     transform: translateX(-110%);
     -webkit-transform: translateX(-110%);
     -moz-transform: translateX(-110%);
     -ms-transform: translateX(-110%);
     -o-transform: translateX(-110%);
+}
+
+/* *Responsive slider-Home */
+@media screen and (max-width: 767px) {
+    .slider .slider-container .slider-item .slider-logo{
+        position: relative;
+        bottom: 150px;
+        left: 120px;
+        width: 80%;
+        height: 150%;
+        z-index: 100;
+    
+    }
 }
 
 /* *Estilos de tu slider */
@@ -412,7 +443,8 @@ body {
     -o-border-radius: 2%;
 }
 /* !Fin Hover Peliculas y series*/
-/* *Modal Trailers */
+
+/* !Modal trailers */
 .video-container {
     position: fixed;
     top: 16%;
@@ -474,6 +506,70 @@ body {
     -moz-transform: scale(0.4);
     -ms-transform: scale(0.4);
     -o-transform: scale(0.4);
+}
+
+.modalTrailer{
+    background-color: rgba(255, 255, 255, 0.199);
+    padding: 2rem;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    align-items: center;
+    justify-content: center;
+    text-align: justify;
+}
+
+.trailerContenido {
+    margin: auto;
+    background-color: #000;
+    border: rgb(255, 255, 255) solid 2px;
+    padding: 3em;
+    height: 100%;
+    width: 70%;
+    
+}
+
+.trailerRemove {
+    text-align: right;
+}
+
+.remove {
+    width: auto;
+    height: 30px;
+    text-align: right;
+    cursor: pointer;
+}
+
+.trailerDescripcion {
+    display: flex;
+    align-items: center;
+    margin-top: 1rem ;
+}
+
+.logoTrailer {
+    width: 200px;
+    height: auto;
+    margin: 1rem ;
+}
+
+.logoTrailerGrande {
+    width: 130px;
+    height: auto;
+    margin: 1rem ;
+}
+
+.trailerDetalles {
+    color: #fff;
+    margin: 1rem
+}
+
+.iframeTrailer {
+    width: 100%;
+    height: 67%;
 }
 /* !Modal trailers */
 /* !Paginas !!!!!!!!!!*/
@@ -565,6 +661,14 @@ iframe {
     #logo {
         display: none;
     }
+
+    .trailerDescripcion {
+        margin-bottom: 1rem;
+    }
+    .trailerDetalles {
+    color: #fff;
+    margin: 0rem;
+}
 }
 
 
@@ -573,7 +677,18 @@ iframe {
         font-size: 10px;
         margin-bottom: 1em;
     }
+
+    .trailerContenido {
+        width: 100%;
+    }
+
+    .logoTrailer {
+        width: auto;
+        height: 200px;
+    }
 }
+
+
 
 footer {
     background-color: #1e1e1e;
@@ -602,6 +717,23 @@ footer {
 }
 
 
+@media (max-width: 912px) {
+    .trailerDescripcion {
+        flex-direction: column;
+    }
+
+    .trailerContenido {
+        height: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .logoTrailer {
+        width: 350px;
+        height: auto;
+    }
+}
 
 
 @media screen and (max-width: 767px) {
@@ -778,5 +910,47 @@ footer {
     .modal-columns .imageDrama:hover .trans h3,
     p {
         display: none;
+    }
+
+    .trailerContenido {
+        height: 90%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .trailerDescripcion {
+        flex-direction: row;
+        justify-content: center;
+        margin: 0;
+    }
+
+    .logoTrailer {
+        width: 250px;
+        height: auto;
+    }
+
+}
+
+@media (max-width: 280px) {
+    .trailerDescripcion {
+        flex-direction: column;
+    }
+
+    .trailerContenido {
+        height: 90%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .logoTrailer {
+        width: 150px;
+        height: auto;
+    }
+
+    .iframeTrailer {
+        width: 100%;
     }
 }
